# Vid2Sim

./: .gitignore  .gitmodules  README.md  data  generate_depth.sh  generate_mask.sh  pyproject.toml
src/vid2sim_recon/: README.md  export_mesh.py  generate_depth.sh  run_sfm.sh  train.py
src/vid2sim_recon/arguments/: __init__.py
src/vid2sim_recon/gaussian_renderer/: __init__.py
src/vid2sim_recon/scene/: cameras.py  dataset_readers.py
src/vid2sim_recon/tools/: generate_depth.py  generate_mask_deva.py  generate_mask_sam2.py
src/vid2sim_recon/tools/colmap_utils/: loader.py
src/vid2sim_recon/tools/grounding_sam2_utils/: common_utils.py
src/vid2sim_recon/utils/: camera_utils.py  general_utils.py  graphics_utils.py  loss_utils.py
src/vid2sim_rl/: BUILD_YOUR_OWN_ENV.md  README.md  env.py  infer.py  requirements.txt  static.py  train.py  utils.py
src/vid2sim_rl/config/: rgb-30envs-pointnav.yaml  rgb-30envs-socialnav.yaml
src/vid2sim_rl/models/: __init__.py  cnn.py  efficientnet.py  r3m.py  utils.py  vint.py
src/vid2sim_rl/models/vint_model/: __init__.py  base_model.py  vint.py
src/vid2sim_rl/unity_envs/: BuildEnv.cs  DepthCamera.cs  DepthShader.shader  GLBLoader.cs
tools/: generate_depth.py  generate_mask_deva.py  generate_mask_sam2.py  run_sfm.py
tools/colmap_utils/: utils.py
