[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Vid2Sim"
version = "0.1.0"
description = "Vid2Sim: Realistic and Interactive Simulation from Video for Urban Navigation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ziyang Xie", email = "ziyangxie01@gmail.com"},
]
keywords = ["video", "simulation", "computer vision", "deep learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "torch==2.1.1",
    "torchvision==0.16.1",
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "matplotlib>=3.3.0",
    "pillow>=8.0.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "torch==2.1.1",
    "torchvision==0.16.1",
    "numpy<2",
    "opencv-python>=4.5.0",
    "matplotlib>=3.3.0",
    "pillow>=8.0.0",
    "imageio>=2.31.0",
    "plyfile>=0.7.0",
    
    "tqdm>=4.60.0",
]
all = [
    "Vid2Sim[dev]",
]

[project.urls]
Homepage = "https://metadriverse.github.io/vid2sim/"
Repository = "https://github.com/Vid2Sim/Vid2Sim"

[project.scripts]
vid2sim = "vid2sim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["vid2sim*"]

[tool.setuptools.package-dir]
"" = "src"
